--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,12 +1,11 @@
 .nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    border-radius: 1rem;
-    border: .1rem solid red;  
-    height: 3rem;
-    /* box-shadow: 0 0 .2rem rgba(81, 255, 110, 0.461), 0 0 .2rem rgba(81, 255, 110, 0.461), 0 0 2rem rgba(81, 255, 110, 0.461); */
-   /*  background-color: rgb(195, 243, 249)   */
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1rem;
+    font-weight: bolder;
+    width: 100%;
 }
 
 .mainContainer{
