--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -1,7 +1,7 @@
 .paginadoNavContainer {
     display: flex;
     justify-content: center;
-    padding: 1rem;
+    padding: 1rem; 
 }
 
 .paginadoNavContainer:hover{
@@ -17,15 +17,26 @@
 }
 
 .number {
-    font-size: 18px;
+    text-align: center;
+    font-size: 20px;
+    color: white;
     font-stretch: condensed;
     margin: .4rem;
-    color: #125b76;
+    margin-right: 5px;
+    height: 30px;
     padding: .4rem;
-    border: .1rem solid rgb(0, 0, 0);
+    border: .1rem solid white;
+    border-radius: .4rem;
+
+    backdrop-filter: blur(100px);
+    background: linear-gradient(
+        to top,
+        right rgb(198, 196, 196) 0%,
+        rgba(255, 251, 251, 0.12) 20%
+      );
 }
 
 .number:hover {
     background-color: #151921da;
-    color: #00a5c2;
+    color: #02879f;
 }
