--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,5 +1,7 @@
 .cardContainer{
-    padding: 2rem;
+    width: 300px;
+    height: 320px;
+    padding: .5rem;
     border: .1rem solid #ffffff;
     border-radius: 12px;
     margin: .8rem;
@@ -19,14 +21,20 @@
     transition: 1s;
 }
 
-.info {
+.name{
     color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 1.2rem;
-    line-height: .5rem;
-    margin: 1rem;
-    align-items: center;
-    justify-content: center;
+    font-size: 1.4rem; 
+ 
 }
+.continente{
+    color: black
+    
+}
+.img{
+    width: 250px;
+    height: 150px;
+}
+
+.link{
+    text-decoration: none;
+  }
