--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -11,24 +11,29 @@
     background-size: cover;
     background-attachment: fixed;
 }
-.title{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+.title {
+    font-family:  'Gill Sans MT';
     font-size: 1.7rem;
     font-weight: bolder;
 }
 
-.contenedor{
+.form {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 10px;
+    align-items: center;
+    width: 21rem;
     padding: 2rem;
     border-radius: 12px;
     margin: .8rem;
     backdrop-filter: blur(50px);
     color: black;
-    background: linear-gradient(
-        to top,
-        right rgb(198, 196, 196) 0%,
-        rgba(255, 251, 251, 0.12) 20%
-      );
+    background: linear-gradient(to top,
+            right rgb(198, 196, 196) 0%,
+            rgba(255, 251, 251, 0.12) 20%);
 }
+
 
 .btn {
     display: inline-flex;
@@ -41,7 +46,7 @@
     box-sizing: border-box;
     height: 2.5rem;
     margin: 12px;
-  
+
     backdrop-filter: blur(1px);
 }
 
@@ -50,16 +55,46 @@
     transition: 0.2s;
     transform: translateY(-1px);
     border-bottom: 1px solid white;
-  }
-  
-.link{
+}
+
+.link {
     text-decoration: none;
     color: white
 }
 
+.labels {
+    color: black;
+    font-family:  'Gill Sans MT';
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 5px;
+    text-align: left;
+    margin: 2rem;    
+}
 
+.inputs {
+    width: 20rem;
+    height: 30px ;
+    border-color: rgba(239, 236, 216, 0.69);
+    border-radius: 7px;
+    font-size: 1rem;
+    color:grey;
+    margin: 10px 0 20px 0;
+    padding-left: 15px;
+}
 
-
+.selectInputs {
+    width: 21.5rem;
+    height: 34px ;
+    border-color: rgba(239, 236, 216, 0.69);
+    border-radius: 7px;
+    font-size: 1rem;
+    color: grey;
+    margin: 10px 0 20px 0;
+    /* text-align: center; */
+    padding-left: 15px;
+     
+}
 
 .btnCreate {
     background-color: black;
@@ -73,10 +108,39 @@
     transition: .3s;
     height: 2.3rem;
     width: 6rem;
+    
+    grid-column: span 2;
+    justify-self: center;
 }
-  
+
 .btnCreate:hover {
     color: black;
     background-color: white;
- 
+}
+
+
+.containerID {
+    display: inline-flex;
+    flex-flow: row;
+    margin: 1rem;
+}
+
+.pais {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.3rem;
+    margin: .4rem;
+    padding: .2rem;
+    font-weight: bold;
+}
+
+.cruz {
+    font-size: .6rem;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    border-radius: .2rem;
+    height: fit-content;
+    width: fit-content;
+    cursor: pointer;
 }
