--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,6 +1,5 @@
 .container {
-    width: 100%;
-    height: 100vh;
+  
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,6 +15,7 @@
     font-family:  'Gill Sans MT';
     font-size: 1.7rem;
     font-weight: bolder;
+    margin-top: 4rem;
 }
 
 .form {
@@ -107,7 +107,7 @@
     cursor: pointer;
     transition: .3s;
     height: 2.3rem;
-    width: 6rem;
+    width: 9rem;
     
     grid-column: span 2;
     justify-self: center;
