--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -68,3 +68,38 @@
   .infoRight img {
     height: 2rem;
   }
+
+
+  
+  @media (max-width: 800px) {
+    .footer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      backdrop-filter: blur(100px);
+    }
+    .infoRight {
+      flex-direction: column;
+    }
+  }
+
+  
+  @media (max-width: 400px) {
+    .footer {
+      z-index: 10;
+      font-size: 12px;
+      margin-left: 7%;
+      margin-right: 1%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      backdrop-filter: blur(100px);
+      color: rgba(255, 255, 255, 0.959);
+    }
+  
+    .infoRight {
+      flex-direction: column;
+    }
+  }
