--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -13,9 +13,10 @@
 
 .containerCards{
     display: grid;
-    grid-template-columns: repeat(3, minmax(10rem, 13rem));
-    gap:12rem;
-  
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: center;
+    gap: 1rem;
 }
 
 .btnReload {
@@ -39,3 +40,37 @@
     transition: .5s;
  
 }
+
+
+
+
+
+  @media (max-width: 400px) {
+
+  .containerCards{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
+  }
+
+  
+/* Estilos para pantallas de hasta 600px de ancho */
+@media (max-width: 600px) {
+    .containerCards {
+      grid-template-columns: repeat(1, minmax(10rem, 13rem));
+      gap: 4rem;
+    }
+  }
+  
+  /* Estilos para pantallas de hasta 900px de ancho */
+  @media (max-width: 900px) {
+    .containerCards {
+      grid-template-columns: repeat(2, minmax(10rem, 13rem));
+      gap: 8rem;
+    }
+  }
+
+  
