--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -101,16 +101,50 @@
     text-decoration: none;
     color: white
 }
+
 .activityContainer{
-   
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
     border-radius: 12px;
     margin: .8rem;
+
+}
+
+.textActivity {
+    font-size: 1.4rem;
+    color: white;
+    font-family:'Gill Sans MT';
+}
+
+.containerAllActivity {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+  
+}
+
+.cardActivity {
+    width: 250px;
+    height: 250px;
     backdrop-filter: blur(50px);
-    color: black;
-    background: linear-gradient(
-        to top,
-        right rgb(198, 196, 196) 0%,
-        rgba(255, 251, 251, 0.12) 20%
-      );
+    color: white;
+    border-radius: 12px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
+}
+.cardActivity h3 {
+    color: white;
+    font-size: 1.3rem;
+    margin: 0;
+    margin-top: 20px;
 }
