--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -51,3 +51,25 @@
     width: 100%;
     margin-top: 1rem;
 }
+
+
+/* Mobile first styles
+@media only screen and (max-width: 767px) {
+    .nav {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .mainContainer {
+      margin: 0;
+      padding: 1rem;
+      width: 100%;
+    }
+    .links {
+        margin: 0;
+        margin-bottom: 1rem;
+        width: 100%;
+        text-align: center;
+      } 
+    }
+      */
