--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -21,6 +21,12 @@
     align-items: center;
 }
 
+/* .tagActivities{
+  color: black;
+  font-size: 1.3rem;
+ 
+  backdrop-filter: blur(100px);
+} */
 
 
 
