--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -118,6 +118,10 @@
     background-color: white;
 }
 
+.detail{
+margin-top: -1rem;
+font-size: .9rem;
+}
 
 .containerID {
     display: inline-flex;
@@ -126,7 +130,7 @@
 }
 
 .pais {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-align: center;
     font-size: 1.3rem;
     margin: .4rem;
@@ -143,4 +147,9 @@
     height: fit-content;
     width: fit-content;
     cursor: pointer;
+}
+
+.error{
+    color: rgb(216, 0, 0);
+    margin-top: -.6rem;
 }
