--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .cardContainer{
-    width: 300px;
-    height: 320px;
+    width: 220px;
+    height: 240px;
     padding: .5rem;
     border: .1rem solid #ffffff;
     border-radius: 12px;
@@ -23,16 +23,18 @@
 
 .name{
     color: black;
-    font-size: 1.4rem; 
+    font-size: 1.2rem; 
  
 }
 .continente{
-    color: black
+    color: black;
+    font-size: .9rem;
+    margin-top: -.6rem;
     
 }
 .img{
-    width: 250px;
-    height: 150px;
+    width: 180px;
+    height: 110px;
 }
 
 .link{
