--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -11,9 +11,9 @@
 
 }
 
-.detailContainer{
+.detailContainer{   
     border-radius: 12px;
-    margin: .8rem;
+    margin: .8rem 0 0 0;
     backdrop-filter: blur(50px);
     color: black;
     background: linear-gradient(
@@ -25,7 +25,7 @@
 
 .title {
     color: white;
-    font-size: 1.4rem;
+    font-size: 1rem;
     margin:.3rem;
 }
  
@@ -34,8 +34,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 1.1rem;
-    line-height: .5rem;
+    font-size: 12px;
+    line-height: .3rem;
     margin: 1rem;
     align-items: center;
     justify-content: center;
@@ -46,7 +46,12 @@
     display: flex;
     justify-content: center;
     margin: 1rem;
-    
+       
+}
+
+.Img{
+    width: 180px;
+    height: 110px;
 }
 
 .btn {
@@ -80,21 +85,20 @@
 .btnCreate {
     background-color: black;
     color: white;
-    font-size: 1rem;
+    font-size: .8rem;
     border-radius: .5rem;
     margin: .2rem;
-    margin-top: 1rem;
+    margin-top: .4rem;
     padding: .3rem;
     cursor: pointer;
     transition: .3s;
-    height: 2.3rem;
-    width: 8rem;
+    height: 2rem;
+    width: 7rem;
 }
   
 .btnCreate:hover {
     color: black;
     background-color: white;
- 
 }
   
 .link{
@@ -114,7 +118,7 @@
 }
 
 .textActivity {
-    font-size: 1.4rem;
+    font-size: 1rem;
     color: white;
     font-family:'Gill Sans MT';
 }
@@ -130,8 +134,8 @@
 }
 
 .cardActivity {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     backdrop-filter: blur(50px);
     color: white;
     border-radius: 12px;
@@ -143,7 +147,7 @@
 }
 .cardActivity h3 {
     color: white;
-    font-size: 1.3rem;
+    font-size: 1rem;
     margin: 0;
     margin-top: 20px;
 }
