--- a/client/src/components/Filters/Filter.module.css
+++ b/client/src/components/Filters/Filter.module.css
@@ -4,17 +4,18 @@
     padding: 1rem; 
     height: 40px;
     justify-content: space-between;
+    margin-top: 1.6rem;
 }
 
 .selectContainer {
     display: flex;
     align-items: center;
-    margin: .4rem;
+    margin: .3rem;
 }
 
 .select {
-    font-size: 15px;
-    padding: 5px 5px 5px 10px;
+    font-size: 12px;
+    padding: 3px 3px 3px 8px;
     border-radius: 8px;
     backdrop-filter: blur(100px);
     background: linear-gradient(
@@ -22,8 +23,6 @@
         right rgb(198, 196, 196) 0%,
         rgba(255, 251, 251, 0.12) 20%
       );
-   
-    
 }
 
 .option {
@@ -40,14 +39,14 @@
 .btnReload {
     background-color: white;
     color: black;
-    font-size: 15px;
+    font-size: 12px;
     border-radius: .5rem;
     border: 1px solid black;
-    margin: .3rem;
+    margin: .5rem;
     cursor: pointer;
     transition: .3s;
-    height: 1.9rem;
-    width: 8rem;
+    height: 1.5rem;
+    width: 6rem;
 }
   
 .btnReload:hover {
