--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -7,7 +7,7 @@
   
     backdrop-filter: blur(100px);
   
-    height: 10rem;
+    height: 9rem;
     width: 100%;
     padding: px 1rem;
     color: darkgrey;
@@ -22,10 +22,15 @@
     z-index: 2;
   }
   
-  .footer h5 {
+  .footer h4 {
     margin-bottom: 0.5rem;
-    font-size: 1rem;
+    font-size: .9rem;
   }
+
+  .footer span {
+    font-size: .8rem;
+  }
+
 
   .infoLeft,
   .infoRight {
@@ -50,7 +55,7 @@
     justify-content: flex-end;
     align-items: center;
     gap: 0.6rem;
-    font-size: 1rem;
+    font-size: .8rem;
     border-radius: 3rem;
     background-color: rgb(69, 69, 69);
     padding-left: 1.2rem;
