--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size: 1.1rem;
+    font-size: 14px;
     font-weight: bolder;
     width: 100%;
 }
