--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -17,14 +17,15 @@
 }
 
 .number {
-    text-align: center;
-    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
     color: white;
     font-stretch: condensed;
-    margin: .4rem;
+    margin: .3rem;
     margin-right: 5px;
-    height: 1.9rem;
-    width: 1.3rem;
+    height: 1.2rem;
+    width: .8rem;
     padding: .4rem;
     border: .1rem solid white;
     border-radius: .4rem;
@@ -47,8 +48,7 @@
     color: white;
     border-radius: .4rem;
     padding: .4rem;
-    height: 1.9rem;
-    width: 1.3rem;
+ 
 }
 
 .btn {
@@ -58,12 +58,11 @@
     align-content: center;
     background-color: rgba(109, 108, 108, 0.5);
     font-weight: 300;
-    font-size: 1em;
-    padding: 1rem;
+    font-size: .8em;
+    padding: .8rem;
     box-sizing: border-box;
-    height: 2rem;
-    margin: 12px;
-  
+    height: .9rem;
+    margin: 7px;
     border: .1rem solid white;
     border-radius: .4rem;
    
