--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -7,24 +7,25 @@
 
 .input{
      border-radius: .2rem;
-     width: 22rem;
-     height: 2rem;
+     width: 15rem;
+     height: 1.6rem;
      padding-left: 1rem;
      margin-right: .3rem;
      border: 2px solid black;
+     font-size: .7rem;
 }
 
 .btn {
      background-color: black;
      color: white;
-     font-size: 1rem;
+     font-size: .8rem;
      border-radius: .5rem;
      margin: .2rem;
      padding: .3rem;
      cursor: pointer;
      transition: .3s;
-     height: 2.3rem;
-     width: 7rem;
+     height: 1.9rem;
+     width: 5.5rem;
 }
    
 .btn:hover {
