--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,9 +1,9 @@
 .cardContainer{
-    width: 220px;
-    height: 240px;
-    padding: .5rem;
+    width: 13.5rem;
+    height: 14.5rem;
+    padding: .3rem;
     border: .1rem solid #ffffff;
-    border-radius: 12px;
+    border-radius: .8rem;
     margin: .8rem;
 
     backdrop-filter: blur(100px);
@@ -23,7 +23,7 @@
 
 .name{
     color: black;
-    font-size: 1.2rem; 
+    font-size: 1.17rem; 
  
 }
 .continente{
@@ -33,8 +33,8 @@
     
 }
 .img{
-    width: 180px;
-    height: 110px;
+    width: 80%;
+    height: 45%;
 }
 
 .link{
