--- a/client/src/components/LandingPage/LandingPage.module.css
+++ b/client/src/components/LandingPage/LandingPage.module.css
@@ -7,6 +7,11 @@
     align-items: center;
 }
 
+.video{
+  width: 100%;
+  height: 125%;
+  
+}
 .content {
   position: absolute;
   width: 45%;
@@ -16,11 +21,11 @@
   justify-content: center;
   align-items: center;
   color: white;
-
+  font-size: .9rem;
 }
 
 .text {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 400;
   color: white;
   margin-top: 0rem;
@@ -34,11 +39,11 @@
   align-content: center;
   background-color: rgba(109, 108, 108, 0.5);
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: 1rem;
   padding: 1rem;
   box-sizing: border-box;
-  height: 50px;
-  margin: 12px;
+  height: 2.3rem;
+  margin: 1rem;
   margin-top: .5rem;
   border: .1rem solid white;
   border-radius: .4rem;
